Crear main y cursos

--- a/index.html
+++ b/index.html
@@ -41,11 +41,163 @@
                 <h1 class="modelo__nombre">Modelo VAI</h1>
                 <p class="modelo__descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, dolorum voluptatem fuga illum nisi saepe, repellat laudantium accusantium doloremque harum</p>
                 <p class="modelo__precio">$399</p>
-                <a href="producto.html" class="modelo__enlace">Ver Producto</a>
+                <a href="producto.html" class="boton modelo__enlace">Ver Producto</a>
             </div>
         </div>    
         <img src="img/header_guitarra.png" alt="header guitarra" class="header__guitarra">
     </header>
+
+    <main class="productos">
+        <h2 class="productos__heading">Nuestra Colección</h2>
+
+        <div class="productos__contenedor">
+            
+            <div class="producto">
+                <img class="producto__imagen" loading="lazy" src="img/guitarra_01.jpg" width="500" height="300" alt="guitara_01">
+
+                <div class="producto__info">
+                    <h3 class="producto__heading">Lukather</h3>
+                    <p class="producto__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vel consequuntur fugit commodi</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="#" class="boton producto__enlace">ver producto</a>
+                </div>
+            </div> <!-- producto -->
+
+            <div class="producto">
+                <img class="producto__imagen" loading="lazy" src="img/guitarra_02.jpg" width="500" height="300" alt="guitara_02">
+
+                <div class="producto__info">
+                    <h3 class="producto__heading">SRV</h3>
+                    <p class="producto__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vel consequuntur fugit commodi</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="#" class="boton producto__enlace">ver producto</a>
+                </div>
+            </div> <!-- producto -->
+
+            <div class="producto">
+                <img class="producto__imagen" loading="lazy" src="img/guitarra_03.jpg" width="500" height="300" alt="guitara_03">
+
+                <div class="producto__info">
+                    <h3 class="producto__heading">Borland</h3>
+                    <p class="producto__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vel consequuntur fugit commodi</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="#" class="boton producto__enlace">ver producto</a>
+                </div>
+            </div> <!-- producto -->
+
+            <div class="producto">
+                <img class="producto__imagen" loading="lazy" src="img/guitarra_04.jpg" width="500" height="300" alt="guitara_04">
+
+                <div class="producto__info">
+                    <h3 class="producto__heading">VAI</h3>
+                    <p class="producto__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vel consequuntur fugit commodi</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="#" class="boton producto__enlace">ver producto</a>
+                </div>
+            </div> <!-- producto -->
+
+            <div class="producto">
+                <img class="producto__imagen" loading="lazy" src="img/guitarra_05.jpg" width="500" height="300" alt="guitara_05">
+
+                <div class="producto__info">
+                    <h3 class="producto__heading">Thompson</h3>
+                    <p class="producto__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vel consequuntur fugit commodi</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="#" class="boton producto__enlace">ver producto</a>
+                </div>
+            </div> <!-- producto -->
+
+            <div class="producto">
+                <img class="producto__imagen" loading="lazy" src="img/guitarra_06.jpg" width="500" height="300" alt="guitara_06">
+
+                <div class="producto__info">
+                    <h3 class="producto__heading">White</h3>
+                    <p class="producto__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vel consequuntur fugit commodi</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="#" class="boton producto__enlace">ver producto</a>
+                </div>
+            </div> <!-- producto -->
+
+            <div class="producto">
+                <img class="producto__imagen" loading="lazy" src="img/guitarra_07.jpg" width="500" height="300" alt="guitara_07">
+
+                <div class="producto__info">
+                    <h3 class="producto__heading">Cobain</h3>
+                    <p class="producto__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vel consequuntur fugit commodi</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="#" class="boton producto__enlace">ver producto</a>
+                </div>
+            </div> <!-- producto -->
+
+            <div class="producto">
+                <img class="producto__imagen" loading="lazy" src="img/guitarra_08.jpg" width="500" height="300" alt="guitara_08">
+
+                <div class="producto__info">
+                    <h3 class="producto__heading">Dale</h3>
+                    <p class="producto__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vel consequuntur fugit commodi</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="#" class="boton producto__enlace">ver producto</a>
+                </div>
+            </div> <!-- producto -->
+
+            <div class="producto">
+                <img class="producto__imagen" loading="lazy" src="img/guitarra_09.jpg" width="500" height="300" alt="guitara_09">
+
+                <div class="producto__info">
+                    <h3 class="producto__heading">Krieger</h3>
+                    <p class="producto__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vel consequuntur fugit commodi</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="#" class="boton producto__enlace">ver producto</a>
+                </div>
+            </div> <!-- producto -->
+
+            <div class="producto">
+                <img class="producto__imagen" loading="lazy" src="img/guitarra_10.jpg" width="500" height="300" alt="guitara_10">
+
+                <div class="producto__info">
+                    <h3 class="producto__heading">Campbell</h3>
+                    <p class="producto__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vel consequuntur fugit commodi</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="#" class="boton producto__enlace">ver producto</a>
+                </div>
+            </div> <!-- producto -->
+
+            <div class="producto">
+                <img class="producto__imagen" loading="lazy" src="img/guitarra_11.jpg" width="500" height="300" alt="guitara_11">
+
+                <div class="producto__info">
+                    <h3 class="producto__heading">Reed</h3>
+                    <p class="producto__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vel consequuntur fugit commodi</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="#" class="boton producto__enlace">ver producto</a>
+                </div>
+            </div> <!-- producto -->
+
+            <div class="producto">
+                <img class="producto__imagen" loading="lazy" src="img/guitarra_12.jpg" width="500" height="300" alt="guitara_12">
+
+                <div class="producto__info">
+                    <h3 class="producto__heading">Hazel</h3>
+                    <p class="producto__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vel consequuntur fugit commodi</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="#" class="boton producto__enlace">ver producto</a>
+                </div>
+            </div> <!-- producto -->
+        </div>
+    </main>
     
+    <section class="cursos">
+        <div class="cursos__contenedor">
+            <div class="cursos__contenido">
+                <h2 class="cursos__heading">
+                    Aprende a tocar guitarra
+                </h2>
+                <p class="cursos__texto">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque enim fugiat nisi inventore laborum facilis cum reiciendis vel totam velit molestias, animi, odit, architecto officia. Dicta illum exercitationem voluptatem laudantium.
+                </p>
+                <a href="#" class="boton cursos__enlace">Más información</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
