Responsive en producto

--- a/producto.html
+++ b/producto.html
@@ -42,7 +42,7 @@
     <main class="producto--page producto--page__contenedor">
 
         <div class="producto__grid">
-            <img src="img/guitarra_04.jpg" alt="Guitarra">
+            <img class="producto__imagen--page" src="img/guitarra_04.jpg" alt="Guitarra">
 
             <div class="producto__info">
                 <h3 class="producto__nombre">Vai</h3>
