--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
                     <p class="entrada__date">20 de Enero de 2022</p>
 
-                    <p class="entrada__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio delectus laborum, quas assumenda, dolorem placeat quo, aliquam labore incidunt alias molestiae</p>
+                    <p class="entrada__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio delectus laborum, quas assumenda, dolorem placeat quo, aliquam labore incidunt alias molestiae,Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio delectus laborum, quas assumenda, dolorem placeat quo, aliquam labore incidunt alias molestiae</p>
 
                     <a href="entrada.html" class="entrada__enlace boton">Leer Entrada</a>
                 </div> 
@@ -227,7 +227,7 @@
 
                     <p class="entrada__date">20 de Enero de 2022</p>
 
-                    <p class="entrada__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio delectus laborum, quas assumenda, dolorem placeat quo, aliquam labore incidunt alias molestiae</p>
+                    <p class="entrada__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio delectus laborum, quas assumenda, dolorem placeat quo, aliquam labore incidunt alias molestiae,Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio delectus laborum, quas assumenda, dolorem placeat quo, aliquam labore incidunt alias molestiae</p>
 
                     <a href="entrada.html" class="entrada__enlace boton">Leer Entrada</a>
                 </div> 
@@ -241,7 +241,7 @@
 
                     <p class="entrada__date">20 de Enero de 2022</p>
 
-                    <p class="entrada__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio delectus laborum, quas assumenda, dolorem placeat quo, aliquam labore incidunt alias molestiae</p>
+                    <p class="entrada__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio delectus laborum, quas assumenda, dolorem placeat quo, aliquam labore incidunt alias molestiae,Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio delectus laborum, quas assumenda, dolorem placeat quo, aliquam labore incidunt alias molestiae</p>
 
                     <a href="entrada.html" class="entrada__enlace boton">Leer Entrada</a>
                 </div> 
@@ -255,7 +255,7 @@
 
                     <p class="entrada__date">20 de Enero de 2022</p>
 
-                    <p class="entrada__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio delectus laborum, quas assumenda, dolorem placeat quo, aliquam labore incidunt alias molestiae</p>
+                    <p class="entrada__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio delectus laborum, quas assumenda, dolorem placeat quo, aliquam labore incidunt alias molestiae,Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio delectus laborum, quas assumenda, dolorem placeat quo, aliquam labore incidunt alias molestiae</p>
 
                     <a href="entrada.html" class="entrada__enlace boton">Leer Entrada</a>
                 </div> 
